lib/src/compiler/tests/testdata/errors/98.out
error: syntax error
 --> line:5:6
  |
5 |      $
  |      ^ this `$` is outside of the condition of a `for .. of` statement
  |